--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0"
   },
+  "homepage": "https://architectstory.github.io/SummitCrew",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"    
   },
   "browserslist": {
     "production": [
@@ -23,5 +26,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
